--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.banner{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50vh;
+    background-color: black;
+    background-size: cover;
+    background-image: url("Keti.jpeg");
+    background-repeat: no-repeat;
+}
+.container{
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+.navigation{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
 .list{
     display: flex;
     justify-content: center;
@@ -33,27 +57,85 @@ header{
     width: 33%;
     padding: 50px;
 }
-.container1{
-    width: 1200px;
-    margin: auto 0;
-}
-.banner{
+.img{
     width: 100%;
 }
 .mt-120{
     margin-top: 120px;
 }
+.col-3{
+    display: flex;
+}
 .image-container{
     padding-right: 20px;
+    width: 300px;
 }
-.input{
-    height: 40px;
-    font-size: 16px;
-    box-sizing: border-box;
-    min-height: 30px;
-    padding: 15px;
-    max-width: 100%;
-    line-height: 22px;
-    max-width: 500px;
-    border-radius: 10px;
+img{
+    width: 100%;
+    padding-right: 50px;
+    background-size: auto;
+    padding: auto;
+}
+.list2{
+    display: flex;
+}
+.leqcia{
+    list-style: none;
+}
+.time{
+    list-style: none;
+    margin-left: 160px;
+}
+.container1{
+    background-color: rgb(244, 244, 239);
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+.col-3{
+    margin: 10px;
+    width: 33%;
+}
+.banner-name{
+    font-size: 80px;
+    color: aliceblue;
+}
+.person-name{
+    font-size: 30px;
+    color: #29b473;
+}
+.btn{
+    width: 250px;
+    height: 50px;
+    background-color: #29B473;
+    color: aliceblue;
+    border: none;
+    border-radius: 7px;
+    font-size: 20px;
+}
+.mt-5{
+    margin-top: 15px;
+}
+.card{
+    padding: auto;
+}
+footer{
+    margin-top: 120px;
+}
+.kursebi{
+    margin-top: 120px;
+}
+.btn2{
+    width: 250px;
+    height: 50px;
+    background-color: #29B473;
+    color: aliceblue;
+    border: none;
+    border-radius: 7px;
+    font-size: 20px;
+    margin-top: 120px;
+    margin-left: 750px;
+}
+.satauri{
+    display: flex;
 }
